--- a/exercícios/ex022/fundo002.html
+++ b/exercícios/ex022/fundo002.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização do fundo</title>
+    <style>
+        body{
+            background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
+            background-size: 100px 100px;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
-    <h1>Teste de aplicação de fundo</h1>
+
 </body>
-</html>l
+</html>
