--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,6 +12,13 @@
             background-repeat: no-repeat;
             background-position: center top;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand-Background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
         }
 
         main{
