--- a/exercícios/ex023/tabela001.html
+++ b/exercícios/ex023/tabela001.html
@@ -9,27 +9,24 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        tr{
-            text-align: center;
+
+        .numero{
+            text-align: right;
         }
-        tr.linha{
-            background-color: gray;
-            color: aliceblue;
-        }
+
 
         td{
             border: 1px solid black;
             padding: 8px;
-        }
-        td.selecionado{
-            background-color: yellow;
-            color: black;
-            font-weight: bolder;
+            text-align: center; /* alinhamento horizontal */
+            vertical-align: top;
         }
     </style>
 </head>
@@ -48,19 +45,19 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">200</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">300</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A4</td>
-            <td class="selecionado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
     </table>
