terminei a tabela 002 e ja fiz tambem a tabel003

--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -22,6 +22,7 @@
             border: 1px solid black;
             border-collapse: collapse;
             margin: auto;
+            position: relative;
         }
 
 
@@ -39,6 +40,12 @@
             color: white;
         }
 
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(56, 56, 56);
+        }
 
         tbody{
             font-size: 1.3em;
@@ -131,6 +138,55 @@
             <tr>
                 <td>Santa Catarina</td>
                 <td class="num">7.164.788</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7.075.181</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.018.354</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4.144.597</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4.018.650</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4.018.127</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3.506.853</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3.484.466</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3.337.357</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.273.227</td>
+            </tr><tr>
+                <td>Distrito Federal</td>
+                <td class="num">3.015.268</td>
+            </tr><tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2.778.986</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2.298.696</td>
+            </tr><tr>
+                <td>Rondônia</td>
+                <td class="num">2.777.225</td>
             </tr>
         </tbody>
         <tfoot>
