--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, quasi natus. Est nobis aut impedit minus eligendi, fugiat animi quos cupiditate. At pariatur enim voluptates, alias deleniti quisquam libero expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod iste aut laboriosam sit, deserunt neque architecto odit accusamus, dolorum labore debitis animi aperiam! Pariatur accusantium, officiis repellendus commodi aperiam natus!</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p class="erro">Infelizmente o seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quaerat, dolorem soluta minima ullam doloribus! Dolorum fuga eaque, asperiores laborum dolores tenetur tempora quasi dignissimos culpa deleniti quod in aliquid? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus blanditiis ut corporis illo laboriosam quas sit odio pariatur voluptatem inventore consequuntur facilis adipisci est omnis cumque, veritatis rem obcaecati! Debitis!</p>
 </body>
