--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus nobis ea facere est laborum itaque ducimus ratione. Deleniti, quod, natus veniam ipsum, velit id placeat quos ad eum dolores explicabo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium aut corporis reprehenderit, sequi maiores explicabo nemo quidem rem nam aliquam accusantium in optio sint voluptate? Maxime doloremque iusto officia temporibus?</p>
 
-    <iframe src="" name="frame">
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima</h1>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
