--- a/exercícios/ex024/iframe006.html
+++ b/exercícios/ex024/iframe006.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adicionando conteúdos</title>
 </head>
 <body>
-    
+    <h1>Conteúdos dentro de iframes</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, natus. Nihil explicabo aspernatur, natus iusto accusamus ipsam officiis. Ab sint consectetur qui aut maiores dicta est iure eligendi necessitatibus deleniti!</p>
+    <h2>Vídeos</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dqIGUeYuzQg" title="https://www.youtube.com/embed/dqIGUeYuzQg?si=0VKP9re8UFGrjSSBYouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+    <h2>Mapas do Google</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1798776835635!2d-46.4775151!3d-23.561982300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66fd63a2b9c1%3A0xe62cf8c71f48ee74!2sR.%20Ant%C3%B4nio%20Velho%20Tinoco%2C%20130%20-%20Cidade%20L%C3%ADder%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008280-120!5e0!3m2!1spt-BR!2sbr!4v1744395030438!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <h2>Mapas do Waze</h2>
+    <iframe src="https://www.waze.com/en/live-map/directions/br/sp/escola-estadual-professor-moacyr-campos-(mocam)?place=ChIJj4AOamFnzpQR8qzYiQxo-Yo" frameborder="0"></iframe>
 </body>
 </html>
