--- a/exercícios/ex025/form004.html
+++ b/exercícios/ex025/form004.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     <h1>Exemplo de formulário</h1>
+    <form action="cadastro.php" method="get" autocomplete="on">
+        <fieldset>
+            <legend>DADOS PESSOAIS</legend>
+            <p>
+                <label for="inome">Nome:</label>
+                <input type="text" name="nome" id="inome" required>
+            </p>
+            <p>
+                <label for="iemail">E-mail</label>
+                <input type="email" name="email" id="iemail" required autocomplete="email">
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\d{4,5}-\d{4}$" placeholder="(xx) xxxx-xxxx">
+            </p>
+        </fieldset>
+        <!-- Estudar mais sobre RegEx -->
+        <p>
+            <input type="submit" value="ENVIAR">
+            <input type="reset" value="LIMPAR">
+        </p>
+    </form>
 </body>
 </html>
