--- a/exercícios/ex025/form005.html
+++ b/exercícios/ex025/form005.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        fieldset{
+            margin: 30px;
+            width: 50vw;
+        }
+    </style>
 </head>
 <body>
     <h1>Exemplo de formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
 
-        <p><input type="submit" value="ENVIAR"></p>
-        <p><input type="reset" value="LIMPAR"></p>
+        <fieldset>
+            <legend>Sexo</legend>
+
+            <p>
+                <input type="radio" name="sexo" id="sxmas" value="m"><label for="sxmas">Masculino</label>
+            </p>
+
+            <p>
+                <input type="radio" name="sexo" id="sxfem" value="f"><label for="sxfem">Feminino</label>
+            </p>
+        </fieldset>
+
+        <fieldset>
+            <legend>Esportes favoritos</legend>
+
+            <p>
+                <input type="checkbox" name="esfut" id="iesfut" value="Futebol"><label for="iesfut">Futebol</label>
+            </p>
+
+            <p>
+                <input type="checkbox" name="esvol" id="iesvol" value="Voleibol"><label for="iesvol">Vôleibol</label>
+            </p>
+
+            <p>
+                <input type="checkbox" name="esbas" id="iesbas" value="Basquetebol"><label for="iesbas">Basquetebol</label>
+            </p>
+
+            <p>
+                <input type="checkbox" name="escic" id="iescic" value="Ciclismo"><label for="iescic">Ciclismo</label>
+            </p>
+        </fieldset>
+        
+        <p>
+            <input type="submit" value="ENVIAR">
+            <input type="reset" value="LIMPAR">
+        </p>
     </form>
 </body>
 </html>
