--- a/exercícios/ex026/mq004/index.html
+++ b/exercícios/ex026/mq004/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <main>
-        <h1>Testando Media Queries</h1>
+        <h1 id="phone">Telas pequenas</h1>
+        <h1 id="tablet">Tablet</h1>
+        <h1 id="pc">Computador</h1>
+        <h1 id="tv">Telas grandes</h1>
         <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
         <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
         <img id="print" src="imagens/icon-print.png" alt="Versão para impressão">
