criei o flex010 e o flex011, neles eu pratiquei os conceitos de flex-basis flex-shrink e flex-grow

--- a/exercícios/ex027/flex008/index.html
+++ b/exercícios/ex027/flex008/index.html
@@ -35,15 +35,15 @@
         }
 
         div.conteiner > div#i4 {
-            
+            align-self: stretch;
         }
 
-        div.conteiner > div#i5 {
-            align-self: center;
+        div#i5 {
+            align-self: end;
         }
 
         div.conteiner > div#i6 {
-            align-self: flex-start;
+            align-self: center;
         }
 
         div.conteiner > div#i7 {
