--- a/exercícios/ex028/grid001/index.html
+++ b/exercícios/ex028/grid001/index.html
@@ -13,11 +13,16 @@
             grid-template-columns: auto auto auto;
             grid-template-rows: auto auto auto;
             gap: 10px;
+            justify-items: center;
+            align-items: stretch;
+            align-content: space-around;
+            justify-content: space-between;
         }
 
         div.item {
             border: 3px solid red;
             padding: 5px;
+
         }
     </style>
 </head>
