--- a/exercícios/ex028/grid003/index.html
+++ b/exercícios/ex028/grid003/index.html
@@ -7,19 +7,16 @@
     <style>
         div.container {
             border: 3px solid blue;
-            height: 250px;
 
             display: grid;
-            /*grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;*/
-            grid-template: repeat(3, auto) / repeat(2, auto);
+            grid-template-columns: 100px 40% repeat(3, 1fr);
+            grid-template-rows: repeat(2, 100px);
+            grid-auto-rows: 80px; /* quando forem criadas novas linhas elas terão esse tamanho */
+            grid-auto-columns: 80px; /* quando forem criadas novas colunas elas terão esse tamanho */
+            grid-auto-flow: column; /* direção que os itens serão posicionados*/
             gap: 10px;
-            /*justify-items: center;
-            align-items: stretch;*/
-            place-items: start stretch;
-            /*align-content: space-around;
-            justify-content: space-between;*/
-            place-content: center space-between;
+            place-items: normal normal;
+            place-content: normal normal;
         }
 
         div.item {
@@ -38,6 +35,9 @@
         <div class="item">E</div>
         <div class="item">F</div>
         <div class="item">G</div>
+        <div class="item">H</div>
+        <div class="item">I</div>
+        <div class="item">J</div>
     </div>
 </body>
 </html>
